# horseshoe

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  Taskfile.yml  build.rs  clippy.toml  flake.nix  renovate.json
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: render.rs
crates/libghostty-vt-sys/: Cargo.toml  build.rs
crates/libghostty-vt-sys/src/: lib.rs
docs/arc42/: 01_introduction_and_goals.md  02_constraints.md  03_context_and_scope.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_crosscutting_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_risks_and_technical_debt.md  12_glossary.md
src/: boxdraw.rs  font.rs  keymap.rs  lib.rs  main.rs  num.rs  paste.rs  pty.rs  selection.rs
src/config/: bindings.rs  colors.rs  font.rs  input.rs  mod.rs  terminal_cfg.rs  tests.rs  types.rs  window.rs
src/renderer/: background.rs  cell_style.rs  cells.rs  cursor.rs  glyph.rs  mod.rs  overlay.rs  primitives.rs  tests.rs
src/terminal/: input.rs  input_tests.rs  mod.rs  render.rs  render_tests.rs  vt.rs  vt_tests.rs
src/wayland/: cursor.rs  drawing.rs  event_loop.rs  handlers.rs  init.rs  input.rs  mod.rs  osc.rs  process.rs  selection.rs  state.rs  tests.rs
tests/: vt_conformance.rs  vt_integration.rs
tests/system/: test_clipboard.py  test_pty_latency.py
