[package]
name = "horseshoe"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["pthrr"]
description = "Wayland terminal emulator"
repository = "https://github.com/pthrr/horseshoe"
license = "MIT"
readme = "README.md"
keywords = ["terminal", "wayland", "vt", "emulator", "foot"]
categories = ["command-line-utilities"]

[[bin]]
name = "hs"
path = "src/main.rs"

[dependencies]
smithay-client-toolkit = "0.20"
wayland-client = "0.31"
calloop = "0.14"
calloop-wayland-source = "0.4"
fontdue = "0.9"
nix = { version = "0.31", features = ["term", "process", "fs", "signal", "user"] }
libc = "0.2"
libghostty-vt = "0.1.1"
clap = { version = "4.6", features = ["derive"] }
base64 = "0.22"
configparser = "3.1"
xkeysym = "0.2"

[profile.dev]
opt-level = 2

[dev-dependencies]
bytecount = "0.6"
criterion = { version = "0.8", features = ["html_reports"] }
serial_test = "3.4"

[[bench]]
name = "render"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
debug = true

[patch.crates-io]
libghostty-vt-sys = { path = "crates/libghostty-vt-sys" }
